<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/coordinatorLayout"
        tools:context=".MainActivity"
        android:focusable="true"
        android:focusableInTouchMode="true"
>

    <RelativeLayout
            android:id="@+id/mainUIRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

        <android.support.v7.widget.Toolbar
                android:id="@+id/dream_toolBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"

                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@color/colorPrimary"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>


        <ImageView android:layout_width="80dp" android:layout_height="80dp"

                   android:layout_marginTop="8dp"
                   android:layout_below="@id/dream_toolBar"
                   android:id="@+id/logoImageView"
                   android:src="@drawable/dreamlogoyellow"
        />



        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/add_dream_info"
                  android:id="@+id/welcomeMessageTextView"
                  android:textSize="18sp"
                  android:textColor="@color/colorPrimaryDark"
                  android:layout_below="@+id/dream_toolBar"
                  android:layout_centerHorizontal="true"
                  android:layout_marginTop="20dp"
                  android:textAlignment="center"

                  android:textStyle="bold"/>

        <android.support.v7.widget.CardView
                android:id="@+id/dreamCardView"
                android:layout_width="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="2dp"
                android:layout_below="@+id/logoImageView"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                android:layout_centerHorizontal="true"
        >

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/dream_title"
                        android:textSize="18sp"
                        android:layout_gravity="start"
                        android:textColor="@color/colorPrimaryDark"

                        android:textStyle="bold" />

                <android.support.design.widget.TextInputLayout
                        android:id="@+id/label_TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="2dp"



                >


                    <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/label_TextField"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/Label"
                            android:inputType="text"
                    />


                </android.support.design.widget.TextInputLayout>





            </LinearLayout>


        </android.support.v7.widget.CardView>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/enter_dream_below"
                  android:id="@+id/infor_dream"
                  android:textSize="18sp"
                  android:layout_below="@+id/dreamCardView"
                  android:layout_marginTop="8dp"
                  android:layout_marginStart="12dp"
                  android:textColor="@color/colorPrimaryDark"
                  android:textAlignment="center"

                  android:textStyle="bold"/>



        <EditText
                android:layout_below="@id/infor_dream"
                android:layout_margin="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:gravity="top"

                android:hint="@string/your_dream"
                android:id="@+id/dreamEditText" />


    </RelativeLayout>



    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:layout_dodgeInsetEdges="bottom"
            android:background="@color/colorPrimaryDark"
            android:text="@string/submit_dream"
            android:textColor="#FAFAFA"
            android:id="@+id/submitDream"
            android:layout_margin="10dp"
    />

</android.support.design.widget.CoordinatorLayout>